--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -10,9 +10,10 @@ WORKDIR /usr/src/chp_api
 
 # install git
 RUN apt-get update \
-	&& apt-get install -y git python3-pip python3-dev
+	&& apt-get install -y git python3-pip python3-dev dos2unix
 
 # add credentials on build
+ARG INTUITION_USER
 ARG SSH_PRIVATE_KEY
 ARG SSH_PUBLIC_KEY
 RUN mkdir -p /root/.ssh/ \
@@ -20,22 +21,32 @@ RUN mkdir -p /root/.ssh/ \
 	&& ssh-keyscan intuition.thayer.dartmouth.edu >> ~/.ssh/known_hosts \
 	&& chmod 644 ~/.ssh/known_hosts
 
-# add keys
-RUN echo "${SSH_PRIVATE_KEY}" > /root/.ssh/id_rsa \
-	&& echo "${SSH_PUBLIC_KEY}" > /root/.ssh/id_rsa.pub \
-	&& chmod 600 /root/.ssh/id_rsa \
+# add keys (use in windows powershell)
+COPY "${SSH_PRIVATE_KEY}" /root/.ssh/
+COPY "${SSH_PUBLIC_KEY}" /root/.ssh/
+RUN chmod 600 /root/.ssh/id_rsa \
 	&& chmod 600 /root/.ssh/id_rsa.pub
+
+# add keys (use in Linux)
+#RUN echo "${SSH_PRIVATE_KEY}" > /root/.ssh/id_rsa \
+#	&& echo "${SSH_PUBLIC_KEY}" > /root/.ssh/id_rsa.pub \
+#	&& chmod 600 /root/.ssh/id_rsa \
+#	&& chmod 600 /root/.ssh/id_rsa.pub
 
 #RUN ssh cyakaboski@intuition.thayer.dartmouth.edu -t -t -v -o StrictHostKeyChecking=no
 
-RUN git clone ssh://cyakaboski@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
-RUN git clone ssh://cyakaboski@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
+RUN git clone ssh://"${INTUITION_USER}"@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
+RUN git clone ssh://"${INTUITION_USER}"@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
 RUN git clone https://github.com/di2ag/bkb-pathway-provider.git
 
 # lint
 RUN pip3 install --upgrade pip
 RUN pip3 install flake8 wheel
 COPY . .
+
+# remove ssh key files (used in windows)
+RUN rm "${SSH_PRIVATE_KEY}" && rm "${SSH_PUBLIC_KEY}"
+
 #RUN flake8 --ignore=E501,F401 .
 
 # install dependencies
@@ -95,7 +106,10 @@ RUN pip3 install --no-cache /wheels/*
 COPY ./entrypoint.prod.sh $APP_HOME
 
 # copy project
-COPY . $APP_HOME
+COPY ./chp_api $APP_HOME/chp_api
+COPY ./chp_handler $APP_HOME/chp_handler
+COPY ./manage.py $APP_HOME
+COPY ./gunicorn.config.py $APP_HOME 
 
 # chown all the files to the app user
 RUN chown -R chp_api:chp_api $APP_HOME
