--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
                 build: 
                         context: ./chp_api
                         dockerfile: Dockerfile.prod
-                command: gunicorn -c /home/chp_api/web/gunicorn.config.py chp_api.wsgi:application --bind 0.0.0.0:8000
+                command: gunicorn -c gunicorn.config.py chp_api.wsgi:application --bind 0.0.0.0:8000 --access-logfile gunicorn-access.log --error-logfile gunicorn-error.log --log-level debug
                 volumes:
                         - static_volume:/home/chp_api/web/staticfiles
                 expose:
@@ -29,7 +29,7 @@ services:
                 volumes:
                         - static_volume:/home/chp_api/web/staticfiles
                 ports:
-                        - 1337:80
+                        - 80:80
                 depends_on:
                         - web
 
