--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,7 @@
 DEBUG=1
 SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=hello_django_dev
-SQL_USER=hello_django
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 129.170.70.76
+SQL_ENGINE=django.db.backends.postgresqlSQL_DATABASE=hello_django_devSQL_USER=hello_django
 SQL_PASSWORD=hello_django
 SQL_HOST=db
 SQL_PORT=5432
