--- a/chp_api/Dockerfile
+++ b/chp_api/Dockerfile
@@ -1,11 +1,19 @@
+###########
+# BUILDER #
+###########
+
 # first stage of build to pull repos
 FROM ubuntu as intermediate
 
+# set work directory
+WORKDIR /usr/src/chp_api
+
 # install git
 RUN apt-get update \
-	&& apt-get install -y git
+	&& apt-get install -y git python3-pip python3-dev dos2unix
 
 # add credentials on build
+ARG INTUITION_USER
 ARG SSH_PRIVATE_KEY
 ARG SSH_PUBLIC_KEY
 RUN mkdir -p /root/.ssh/ \
@@ -14,8 +22,8 @@ RUN mkdir -p /root/.ssh/ \
 	&& chmod 644 ~/.ssh/known_hosts
 
 # add keys (use in windows powershell)
-COPY ./id_rsa /root/.ssh/
-COPY ./id_rsa.pub /root/.ssh/
+COPY "${SSH_PRIVATE_KEY}" /root/.ssh/
+COPY "${SSH_PUBLIC_KEY}" /root/.ssh/
 RUN chmod 600 /root/.ssh/id_rsa \
 	&& chmod 600 /root/.ssh/id_rsa.pub
 
@@ -27,54 +35,62 @@ RUN chmod 600 /root/.ssh/id_rsa \
 
 #RUN ssh cyakaboski@intuition.thayer.dartmouth.edu -t -t -v -o StrictHostKeyChecking=no
 
-RUN git clone ssh://cyakaboski@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
-RUN git clone ssh://cyakaboski@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
+RUN git clone ssh://"${INTUITION_USER}"@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
+RUN git clone ssh://"${INTUITION_USER}"@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
 RUN git clone https://github.com/di2ag/bkb-pathway-provider.git
+
+# install dependencies
+COPY ./requirements.txt .
+RUN pip3 wheel --no-cache-dir --no-deps --wheel-dir /usr/src/chp_api/wheels -r requirements.txt
+
+# gather pybkb wheel
+RUN cd PyBKB && python3 setup.py bdist_wheel && cd dist && cp pybkb-1.0.0-py3-none-any.whl /usr/src/chp_api/wheels
+
+# gather chp wheel
+RUN cd bkb-pathway-provider && python3 setup.py bdist_wheel && cd dist && cp chp-1.0.0-py3-none-any.whl /usr/src/chp_api/wheels
+
+# gather chp-data wheel
+RUN cd ChpData && python3 setup.py bdist_wheel && cd dist && cp chp_data-0.0.1-py3-none-any.whl /usr/src/chp_api/wheels
+
+
+
+#########
+# FINAL #
+#########
 
 #pull official base image
 FROM ubuntu:20.04
 
-# copy repo to new image
-COPY --from=intermediate /PyBKB /srv/PyBKB
-COPY --from=intermediate /ChpData /srv/ChpData
-COPY --from=intermediate /bkb-pathway-provider /srv/bkb-pathway-provider
+# add app user
+RUN groupadd chp_api && useradd -ms /bin/bash -g chp_api chp_api
 
-# set work directory
-WORKDIR /usr/src/chp_api
-
-# set ARGs
-ARG DEBIAN_FRONTEND=noninterative
+# create the appropriate directories
+ENV HOME=/home/chp_api
+ENV APP_HOME=/home/chp_api/web
+RUN mkdir $APP_HOME
+RUN mkdir $APP_HOME/staticfiles
+WORKDIR $APP_HOME
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV TZ=America/New_York
 
+# set ARGs
+ARG DEBIAN_FRONTEND=noninterative
+
 # install dependencies
 RUN apt-get update \
 	&& apt-get install -y python3-pip graphviz openmpi-bin libopenmpi-dev build-essential libssl-dev libffi-dev python3-dev 
-
 RUN apt-get install -y libgraphviz-dev python3-pygraphviz
 RUN apt-get install -y libpq-dev
 RUN apt-get install -y netcat
 
-# install django dependencies
+# copy repo to new image
+COPY --from=intermediate /usr/src/chp_api/wheels /wheels
+COPY --from=intermediate /usr/src/chp_api/requirements.txt .
 RUN pip3 install --upgrade pip
-
-COPY ./requirements.txt .
-RUN pip3 install -r requirements.txt
-RUN pip3 install wheel
-
-# install pybkb
-RUN cd /srv/PyBKB && python3 setup.py bdist_wheel && cd dist && pip3 install pybkb-1.0.0-py3-none-any.whl
-
-# install chp
-RUN cd /srv/bkb-pathway-provider && python3 setup.py bdist_wheel && cd dist && pip3 install chp-1.0.0-py3-none-any.whl
-
-# install chp-data
-RUN cd /srv/ChpData && python3 setup.py bdist_wheel && cd dist && pip3 install chp_data-0.0.1-py3-none-any.whl
-
-RUN pip3 freeze
+RUN pip3 install --no-cache /wheels/*
 
 # copy entry point
 COPY ./entrypoint.sh .
