Add distributed reasoning capability.

--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,10 @@
 DEBUG=1
 SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 129.170.70.76
-SQL_ENGINE=django.db.backends.postgresqlSQL_DATABASE=hello_django_devSQL_USER=hello_django
-SQL_PASSWORD=hello_django
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=chp_api_prod
+SQL_USER=chp_api_user
+SQL_PASSWORD=chp_api_user
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
