Edits to dev dockerfiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
                 volumes:
                         - postgres_data:/var/lib/postgresql/data/
                 environment:
-                        - POSTGRES_USER=hello_django
-                        - POSTGRES_PASSWORD=hello_django
-                        - POSTGRES_DB=hello_django_dev
+                        - POSTGRES_USER=chp_api_user
+                        - POSTGRES_PASSWORD=chp_api_user
+                        - POSTGRES_DB=chp_api_dev
 
 volumes:
         postgres_data:
