--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,9 @@ services:
                 depends_on:
                         - db
         db:
-                image: postgres:12.0-alpine
+                image: mvertes/alpine-mongo
                 volumes:
-                        - postgres_data:/var/lib/postgresql/data/
-                environment:
-                        - POSTGRES_USER=chp_api_user
-                        - POSTGRES_PASSWORD=chp_api_user
-                        - POSTGRES_DB=chp_api_dev
+                        - mongoDB_data:/var/lib/postgresql/data/
 
 volumes:
-        postgres_data:
+        mongoDB_data:
