--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 DEBUG=0
 SECRET_KEY=BkbsAreTheBest2020
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 129.170.70.76 10.3.4.0 chp.thayer.dartmouth.edu
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 129.170.70.76 10.3.4.0 chp.thayer.dartmouth.edu 10.3.2.2 
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=chp_api_prod
 SQL_USER=chp_api_user
