Added client as a submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ChpData"]
 	path = ChpData
 	url = /home/public/git/projects/ChpData.git
+[submodule "submodules/chp_client"]
+	path = submodules/chp_client
+	url = git@github.com:di2ag/chp_client.git
