--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -13,7 +13,6 @@ RUN apt-get update \
 	&& apt-get install -y git python3-pip python3-dev dos2unix
 
 # add credentials on build
-ARG INTUITION_USER
 ARG SSH_PRIVATE_KEY
 ARG SSH_PUBLIC_KEY
 RUN mkdir -p /root/.ssh/ \
@@ -26,6 +25,7 @@ COPY "${SSH_PRIVATE_KEY}" /root/.ssh/
 COPY "${SSH_PUBLIC_KEY}" /root/.ssh/
 RUN chmod 600 /root/.ssh/id_rsa \
 	&& chmod 600 /root/.ssh/id_rsa.pub
+RUN chmod 600 /root/.ssh/id_rsa.pub
 
 # add keys (use in Linux)
 #RUN echo "${SSH_PRIVATE_KEY}" > /root/.ssh/id_rsa \
@@ -35,8 +35,8 @@ RUN chmod 600 /root/.ssh/id_rsa \
 
 #RUN ssh cyakaboski@intuition.thayer.dartmouth.edu -t -t -v -o StrictHostKeyChecking=no
 
-RUN git clone ssh://"${INTUITION_USER}"@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
-RUN git clone ssh://"${INTUITION_USER}"@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
+RUN git clone ssh://git@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
+RUN git clone ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
 RUN git clone https://github.com/di2ag/chp.git
 RUN git clone https://github.com/di2ag/chp_client.git
 
