--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -36,10 +36,11 @@ RUN chmod 600 /root/.ssh/id_rsa.pub
 #RUN ssh cyakaboski@intuition.thayer.dartmouth.edu -t -t -v -o StrictHostKeyChecking=no
 
 RUN git clone ssh://git@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
-RUN git clone --depth 1 --single-branch --branch master ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
-RUN git clone --single-branch --branch darwin-stage https://github.com/di2ag/chp.git
-RUN git clone --single-branch --branch darwin-stage https://github.com/di2ag/chp_client.git
+RUN git clone --depth 1 --single-branch --branch darwin-cyakaboski ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
+RUN git clone --single-branch --branch darwin-yakaboskic https://github.com/di2ag/chp.git
+RUN git clone --single-branch --branch darwin-yakaboskic https://github.com/di2ag/chp_client.git
 RUN git clone https://github.com/di2ag/trapi_model.git
+RUN git clone https://github.com/di2ag/reasoner-validator.git
 
 # lint
 RUN pip3 install --upgrade pip
@@ -69,6 +70,9 @@ RUN cd ChpData && python3 setup.py bdist_wheel && cd dist && cp chp_data-*-py3-n
 
 # gather trapi model wheel
 RUN cd trapi_model && python3 setup.py bdist_wheel && cd dist && cp trapi_model-*-py3-none-any.whl /usr/src/chp_api/wheels
+
+# gather reasoner-validator wheel
+RUN cd reasoner-validator && python3 setup.py bdist_wheel && cd dist && cp reasoner_validator-*-py3-none-any.whl /usr/src/chp_api/wheels
 
 #########
 # FINAL #
