--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -37,9 +37,9 @@ RUN chmod 600 /root/.ssh/id_rsa.pub
 
 RUN git clone ssh://git@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
 RUN git clone --depth 1 --single-branch --branch master ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp.git
+RUN git clone --single-branch --branch wildcard_fix https://github.com/di2ag/chp.git
 RUN git clone --single-branch --branch main https://github.com/di2ag/chp_client.git
-RUN git clone https://github.com/di2ag/trapi_model.git
+RUN git clone --single-branch --branch meta_kg_validation https://github.com/di2ag/trapi_model.git
 RUN git clone https://github.com/di2ag/reasoner-validator.git
 
 # lint
@@ -111,6 +111,7 @@ COPY --from=intermediate /usr/src/chp_api/wheels /wheels
 COPY --from=intermediate /usr/src/chp_api/requirements.txt .
 RUN pip3 install --upgrade pip
 RUN pip3 install --no-cache /wheels/*
+#RUN pip3 install linkml-model
 
 # copy entry point
 COPY ./entrypoint.prod.sh $APP_HOME
