Added production branch to DockerFile.

--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -35,12 +35,12 @@ RUN chmod 600 /root/.ssh/id_rsa.pub
 
 #RUN ssh cyakaboski@intuition.thayer.dartmouth.edu -t -t -v -o StrictHostKeyChecking=no
 
-RUN git clone ssh://git@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
-RUN git clone --depth 1 --single-branch --branch staging ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
-RUN git clone --single-branch --branch staging https://github.com/di2ag/chp.git
-RUN git clone --single-branch --branch main https://github.com/di2ag/chp_client.git
-RUN git clone --single-branch --branch staging https://github.com/di2ag/trapi_model.git
-RUN git clone https://github.com/di2ag/reasoner-validator.git
+RUN git clone --single-branch --branch production ssh://git@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
+RUN git clone --depth 1 --single-branch --branch production ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp_client.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/trapi_model.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/reasoner-validator.git
 
 # lint
 RUN pip3 install --upgrade pip
