--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -39,7 +39,7 @@ RUN git clone --single-branch --branch staging ssh://git@intuition.thayer.dartmo
 RUN git clone --depth 1 --single-branch --branch staging ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
 RUN git clone --single-branch --branch staging https://github.com/di2ag/chp.git
 RUN git clone --single-branch --branch staging https://github.com/di2ag/chp_client.git
-RUN git clone --single-branch --branch removing-processing-and-validation https://github.com/di2ag/trapi_model.git
+RUN git clone --single-branch --branch staging https://github.com/di2ag/trapi_model.git
 RUN git clone --single-branch --branch staging https://github.com/di2ag/reasoner-validator.git
 RUN git clone --single-branch --branch staging https://github.com/di2ag/chp_utils.git
 
