adding data files as part of chp_data instalation process

--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -35,12 +35,14 @@ RUN chmod 600 /root/.ssh/id_rsa.pub
 
 #RUN ssh cyakaboski@intuition.thayer.dartmouth.edu -t -t -v -o StrictHostKeyChecking=no
 
-RUN git clone --single-branch --branch production ssh://git@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
-RUN git clone --depth 1 --single-branch --branch production ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
-RUN git clone --single-branch --branch production https://github.com/di2ag/chp.git
-RUN git clone --single-branch --branch production https://github.com/di2ag/chp_client.git
-RUN git clone --single-branch --branch production https://github.com/di2ag/trapi_model.git
-RUN git clone --single-branch --branch production https://github.com/di2ag/reasoner-validator.git
+RUN git clone --single-branch --branch adding-pathways-app ssh://git@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
+RUN git clone --depth 1 --single-branch --branch adding-pathways-app ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
+RUN git clone --single-branch --branch adding-pathways-app https://github.com/di2ag/chp.git
+RUN git clone --single-branch --branch adding-pathways-app https://github.com/di2ag/chp_client.git
+RUN git clone --single-branch --branch adding-pathways-app https://github.com/di2ag/trapi_model.git
+RUN git clone --single-branch --branch adding-pathways-app https://github.com/di2ag/reasoner-validator.git
+RUN git clone --single-branch --branch adding-pathways-app https://github.com/di2ag/chp_utils.git
+RUN git clone --single-branch --branch adding-pathways-app  https://github.com/di2ag/chp-look-up.git
 
 # lint
 RUN pip3 install --upgrade pip
@@ -55,6 +57,12 @@ RUN rm "${SSH_PRIVATE_KEY}" && rm "${SSH_PUBLIC_KEY}"
 # install dependencies
 COPY ./requirements.txt .
 RUN pip3 wheel --no-cache-dir --no-deps --wheel-dir /usr/src/chp_api/wheels -r requirements.txt
+
+#make directory to store api apps in
+RUN mkdir /usr/src/chp_api/api-apps/ 
+
+# gather chp-look-up app
+RUN cd chp-look-up && mv look-up-service/ /usr/src/chp_api/api-apps/
 
 # gather pybkb wheel
 RUN cd PyBKB && python3 setup.py bdist_wheel && cd dist && cp pybkb-*-py3-none-any.whl /usr/src/chp_api/wheels
@@ -73,6 +81,11 @@ RUN cd trapi_model && python3 setup.py bdist_wheel && cd dist && cp trapi_model-
 
 # gather reasoner-validator wheel
 RUN cd reasoner-validator && python3 setup.py bdist_wheel && cd dist && cp reasoner_validator-*-py3-none-any.whl /usr/src/chp_api/wheels
+
+# gather chp-utils wheel
+RUN cd chp_utils && python3 setup.py bdist_wheel && cd dist && cp chp_utils-*-py3-none-any.whl /usr/src/chp_api/wheels
+
+
 
 #########
 # FINAL #
@@ -111,6 +124,9 @@ COPY --from=intermediate /usr/src/chp_api/wheels /wheels
 COPY --from=intermediate /usr/src/chp_api/requirements.txt .
 RUN pip3 install --upgrade pip
 RUN pip3 install --no-cache /wheels/*
+
+# copy look up service into django
+COPY --from=intermediate /usr/src/chp_api/api-apps/* /home/chp_api/web/
 
 # copy entry point
 COPY ./entrypoint.prod.sh $APP_HOME
