--- a/docker-compose.stage.yml
+++ b/docker-compose.stage.yml
@@ -5,7 +5,7 @@ services:
                 build: 
                         context: ./chp_api
                         dockerfile: Dockerfile.stage
-                command: gunicorn -c gunicorn.config.py chp_api.wsgi:application --bind 0.0.0.0:8000 --access-logfile gunicorn-access.log --error-logfile gunicorn-error.log --log-level debug
+                command: gunicorn -c gunicorn.config.py --env DJANGO_SETTINGS_MODULE=chp_api.settings.staging chp_api.wsgi:application --bind 0.0.0.0:8000 --access-logfile gunicorn-access.log --error-logfile gunicorn-error.log --log-level debug
                 volumes:
                         - static_volume:/home/chp_api/web/staticfiles
                 expose:
