--- a/chp_api/Dockerfile.stage
+++ b/chp_api/Dockerfile.stage
@@ -12,8 +12,8 @@ WORKDIR /usr/src/chp_api
 RUN apt-get update \
 	&& apt-get install -y git python3-pip python3-dev dos2unix
 
-RUN git clone --single-branch --branch staging ssh://git@intuition.thayer.dartmouth.edu/home/public/git/modules/PyBKB.git
-RUN git clone --depth 1 --single-branch --branch staging ssh://git@intuition.thayer.dartmouth.edu/home/public/git/projects/ChpData.git
+RUN git clone --single-branch --branch staging git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
+RUN git clone --depth 1 --single-branch --branch staging git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
 RUN git clone --single-branch --branch staging https://github.com/di2ag/chp.git
 RUN git clone --single-branch --branch staging https://github.com/di2ag/chp_client.git
 RUN git clone --single-branch --branch staging https://github.com/di2ag/trapi_model.git
