Differentiate between gunicorn config files. Setting up stage branches will now only launch 1 worker and should be better on memory for loading the BKBs. Setting up prod branches will still launch 3 workers as prod sould have more memory to spare.

--- a/chp_api/Dockerfile.stage
+++ b/chp_api/Dockerfile.stage
@@ -96,7 +96,7 @@ COPY ./chp_api $APP_HOME/chp_api
 COPY ./apis $APP_HOME/apis
 COPY ./utils $APP_HOME/utils
 COPY ./manage.py $APP_HOME
-COPY ./gunicorn.config.py $APP_HOME 
+COPY ./gunicorn.config-stage.py $APP_HOME 
 
 # chown all the files to the app user
 RUN chown -R chp_api:chp_api $APP_HOME
