--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
-	proxy_read_timeout 3600;
+	proxy_read_timeout 360;
+        proxy_send_timeout 360;
+        proxy_connect_timeout 360;
     }
 
     location /staticfiles/ {
