--- a/chp_api/Dockerfile.stage
+++ b/chp_api/Dockerfile.stage
@@ -12,13 +12,14 @@ WORKDIR /usr/src/chp_api
 RUN apt-get update \
 	&& apt-get install -y git python3-pip python3-dev dos2unix
 
-RUN git clone --single-branch --branch staging git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
-RUN git clone --depth 1 --single-branch --branch staging git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
-RUN git clone --single-branch --branch staging https://github.com/di2ag/chp.git
-RUN git clone --single-branch --branch staging https://github.com/di2ag/chp_client.git
-RUN git clone --single-branch --branch staging https://github.com/di2ag/trapi_model.git
-RUN git clone --single-branch --branch staging https://github.com/di2ag/reasoner-validator.git
-RUN git clone --single-branch --branch staging https://github.com/di2ag/chp_utils.git
+RUN git clone --single-branch --branch master git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
+RUN git clone --depth 1 --single-branch --branch master git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
+RUN git clone --single-branch --branch master https://github.com/di2ag/chp.git
+RUN git clone --single-branch --branch master https://github.com/di2ag/chp_client.git
+RUN git clone --single-branch --branch master https://github.com/di2ag/trapi_model.git
+RUN git clone --single-branch --branch master https://github.com/di2ag/reasoner-validator.git
+RUN git clone --single-branch --branch master https://github.com/di2ag/chp_utils.git
+RUN git clone --single-branch --branch master https://github.com/di2ag/chp_look_up.git
 
 # lint
 RUN pip3 install --upgrade pip
@@ -50,6 +51,8 @@ RUN cd reasoner-validator && python3 setup.py bdist_wheel && cd dist && cp reaso
 # gather chp_utils wheel
 RUN cd chp_utils && python3 setup.py bdist_wheel && cd dist && cp chp_utils-*-py3-none-any.whl /usr/src/chp_api/wheels
 
+#gather chp_look_up wheel
+RUN cd chp_look_up && python3 setup.py bdist_wheel && cd dist && cp chp_look_up-*-py3-none-any.whl /usr/src/chp_api/wheels
 #########
 # FINAL #
 #########
