fixing prod docker file

--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -12,14 +12,14 @@ WORKDIR /usr/src/chp_api
 RUN apt-get update \
 	&& apt-get install -y git python3-pip python3-dev dos2unix
 
-RUN git clone --single-branch --branch master git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
-RUN git clone --depth 1 --single-branch --branch master git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp_client.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/trapi_model.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/reasoner-validator.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp_utils.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp_look_up.git
+RUN git clone --single-branch --branch production git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
+RUN git clone --depth 1 --single-branch --branch production git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp_client.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/trapi_model.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/reasoner-validator.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp_utils.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp_look_up.git
 # lint
 RUN pip3 install --upgrade pip
 RUN pip3 install flake8 wheel
