--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -47,7 +47,10 @@ pipeline {
                     docker.withRegistry('https://853771734544.dkr.ecr.us-east-1.amazonaws.com', 'ecr:us-east-1:aws-ifx-deploy') {
                         docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}")
                     }
-                    docker.build(env.DOCKER_REPO_NAME, "--no-cache ./nginx")
+                    sh '''
+                    cp deploy/chp-api/configs/nginx.conf deploy/chp-api/nginx/
+                    '''
+                    docker.build(env.DOCKER_REPO_NAME, "--no-cache ./deploy/chp-api/nginx")
                     docker.withRegistry('https://853771734544.dkr.ecr.us-east-1.amazonaws.com', 'ecr:us-east-1:aws-ifx-deploy') {
                         docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}-nginx")
                     }
