--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -12,14 +12,16 @@ WORKDIR /usr/src/chp_api
 RUN apt-get update \
 	&& apt-get install -y git python3-pip python3-dev dos2unix
 
-RUN git clone --single-branch --branch master git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
-RUN git clone --depth 1 --single-branch --branch master git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp_client.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/trapi_model.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/reasoner-validator.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp_utils.git
-RUN git clone --single-branch --branch master https://github.com/di2ag/chp_look_up.git
+RUN git clone --single-branch --branch production git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
+RUN git clone --depth 1 --single-branch --branch production git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp_client.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/trapi_model.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/reasoner-validator.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp_utils.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp_look_up.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/chp_learn.git
+
 # lint
 RUN pip3 install --upgrade pip
 RUN pip3 install flake8 wheel
@@ -52,6 +54,9 @@ RUN cd chp_utils && python3 setup.py bdist_wheel && cd dist && cp chp_utils-*-py
 
 #gather chp_look_up wheel
 RUN cd chp_look_up && python3 setup.py bdist_wheel && cd dist && cp chp_look_up-*-py3-none-any.whl /usr/src/chp_api/wheels
+
+#gather chp_learn wheel
+RUN cd chp_learn && python3 setup.py bdist_wheel && cd dist && cp chp_learn-*-py3-none-any.whl /usr/src/chp_api/wheels
 
 #########
 # FINAL #
@@ -96,11 +101,12 @@ COPY ./entrypoint.prod.sh $APP_HOME
 
 # copy project
 COPY ./chp_api $APP_HOME/chp_api
-COPY ./apis $APP_HOME/apis
-COPY ./utils $APP_HOME/utils
+#COPY ./apis $APP_HOME/apis
+#COPY ./utils $APP_HOME/utils
 COPY ./manage.py $APP_HOME
 COPY ./dispatcher $APP_HOME/dispatcher
-COPY ./gunicorn.config-prod.py $APP_HOME 
+COPY ./gunicorn.config-prod.py $APP_HOME
+COPY ./chp_db_fixture.json.gz $APP_HOME
 
 # chown all the files to the app user
 RUN chown -R chp_api:chp_api $APP_HOME
