updated deployment scripts to find specific settings and hardcoded to ubtunu 20.04 for python version related issues

--- a/chp_api/Dockerfile.local
+++ b/chp_api/Dockerfile.local
@@ -3,7 +3,7 @@
 ###########
 
 # first stage of build to pull repos
-FROM ubuntu as intermediate
+FROM ubuntu:20.04 as intermediate
 
 # set work directory
 WORKDIR /usr/src/chp_api
