--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -21,7 +21,7 @@ RUN git clone --single-branch --branch production https://github.com/di2ag/reaso
 RUN git clone --single-branch --branch production https://github.com/di2ag/chp_utils.git
 RUN git clone --single-branch --branch production https://github.com/di2ag/chp_look_up.git
 RUN git clone --single-branch --branch production https://github.com/di2ag/chp_learn.git
-run git clone --single-branch --branch production git@github.com:di2ag/gene-specificity.git
+RUN git clone --single-branch --branch production https://github.com/di2ag/gene-specificity.git
 
 # lint
 RUN pip3 install --upgrade pip
