--- a/chp_api/Dockerfile.prod
+++ b/chp_api/Dockerfile.prod
@@ -12,10 +12,10 @@ WORKDIR /usr/src/chp_api
 RUN apt-get update \
 	&& apt-get install -y git python3-pip python3-dev dos2unix
 
-RUN git clone --single-branch --branch production git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
-RUN git clone --depth 1 --single-branch --branch production git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
-RUN git clone --single-branch --branch production https://github.com/di2ag/chp.git
-RUN git clone --single-branch --branch production https://github.com/di2ag/chp_client.git
+#RUN git clone --single-branch --branch production git://git.chp-dev.thayer.dartmouth.edu/PyBKB.git
+#RUN git clone --depth 1 --single-branch --branch production git://git.chp-dev.thayer.dartmouth.edu/ChpData.git
+#RUN git clone --single-branch --branch production https://github.com/di2ag/chp.git
+#RUN git clone --single-branch --branch production https://github.com/di2ag/chp_client.git
 RUN git clone --single-branch --branch production https://github.com/di2ag/trapi_model.git
 RUN git clone --single-branch --branch production https://github.com/di2ag/reasoner-validator.git
 RUN git clone --single-branch --branch production https://github.com/di2ag/chp_utils.git
@@ -33,16 +33,16 @@ COPY ./requirements.txt .
 RUN pip3 wheel --no-cache-dir --no-deps --wheel-dir /usr/src/chp_api/wheels -r requirements.txt
 
 # gather pybkb wheel
-RUN cd PyBKB && python3 setup.py bdist_wheel && cd dist && cp pybkb-*-py3-none-any.whl /usr/src/chp_api/wheels
+#RUN cd PyBKB && python3 setup.py bdist_wheel && cd dist && cp pybkb-*-py3-none-any.whl /usr/src/chp_api/wheels
 
 # gather chp wheel
-RUN cd chp && python3 setup.py bdist_wheel && cd dist && cp chp-*-py3-none-any.whl /usr/src/chp_api/wheels
+#RUN cd chp && python3 setup.py bdist_wheel && cd dist && cp chp-*-py3-none-any.whl /usr/src/chp_api/wheels
 
 # gather client wheel
-RUN cd chp_client && python3 setup.py bdist_wheel && cd dist && cp chp_client-*-py3-none-any.whl /usr/src/chp_api/wheels
+#RUN cd chp_client && python3 setup.py bdist_wheel && cd dist && cp chp_client-*-py3-none-any.whl /usr/src/chp_api/wheels
 
 # gather chp-data wheel
-RUN cd ChpData && python3 setup.py bdist_wheel && cd dist && cp chp_data-*-py3-none-any.whl /usr/src/chp_api/wheels
+#RUN cd ChpData && python3 setup.py bdist_wheel && cd dist && cp chp_data-*-py3-none-any.whl /usr/src/chp_api/wheels
 
 # gather trapi model wheel
 RUN cd trapi_model && python3 setup.py bdist_wheel && cd dist && cp trapi_model-*-py3-none-any.whl /usr/src/chp_api/wheels
