--- a/docker-compose.stage.yml
+++ b/docker-compose.stage.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
         web:
                 build: 
-                        context: ./chp_api
+                        context: .
                         dockerfile: Dockerfile.stage
                 command: gunicorn -c gunicorn.config-stage.py --env DJANGO_SETTINGS_MODULE=chp_api.settings.staging chp_api.wsgi:application --bind 0.0.0.0:8000 --access-logfile gunicorn-access.log --error-logfile gunicorn-error.log --log-level debug
                 volumes:
@@ -12,27 +12,6 @@ services:
                         - 8000
                 env_file:
                         - ./.env.stage
-                depends_on:
-                        - db
-        db:
-                image: postgres:12.0-alpine
-                volumes:
-                        - postgres_data:/var/lib/postgresql/data/
-                environment:
-                        - POSTGRES_USER=chp_api_user
-                        - POSTGRES_PASSWORD=chp_api_user
-                        - POSTGRES_DB=chp_api_prod
-                env_file:
-                        - ./.env.stage.db
-        nginx:
-                build: ./nginx
-                volumes:
-                        - static_volume:/home/chp_api/web/staticfiles
-                ports:
-                        - 80:80
-                depends_on:
-                        - web
-
 volumes:
         postgres_data:
         static_volume:
