--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.analysis.typeCheckingMode": "off",
     "workbench.editor.enablePreview": false,
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
 }
