--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
            when { expression { return env.BUILD == 'true' }}
             steps {
                 script {
-                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./chp_api/Dockerfile.prod ./chp_api")
+                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./chp_api/Dockerfile ./chp_api")
                     docker.withRegistry('https://853771734544.dkr.ecr.us-east-1.amazonaws.com', 'ecr:us-east-1:aws-ifx-deploy') {
                         docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}")
                     }
