--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,12 @@ services:
         web:
                 build: 
                         context: .
-                        dockerfile: Dockerfile.prod
-                command: gunicorn -c gunicorn.config-prod.py --env DJANGO_SETTINGS_MODULE=chp_api.settings.production chp_api.wsgi:application --bind 0.0.0.0:8000
+                        dockerfile: Dockerfile
+                command: gunicorn -c gunicorn.config.py --env DJANGO_SETTINGS_MODULE=chp_api.settings chp_api.wsgi:application --bind 0.0.0.0:8000
                 volumes:
                         - static_volume:/home/chp_api/web/staticfiles
                 expose:
                         - 8000
-                env_file:
-                        - ./.env.prod
 volumes:
         postgres_data:
         static_volume:
