--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
-chp_learn @ git+https://github.com/di2ag/chp_learn.git@production
-chp_utils @ git+https://github.com/di2ag/chp_utils.git@production
-trapi_model @ git+https://github.com/di2ag/trapi_model.git@production
-chp_look_up @ git+https://github.com/di2ag/chp_look_up.git@production
-gene-specificity @ git+https://github.com/di2ag/gene-specificity.git@production
-reasoner-validator @ git+https://github.com/di2ag/reasoner-validator.git@production
+chp_learn @ git+https://github.com/di2ag/chp_learn.git@master
+chp_utils @ git+https://github.com/di2ag/chp_utils.git@master
+trapi_model @ git+https://github.com/di2ag/trapi_model.git@master
+chp_look_up @ git+https://github.com/di2ag/chp_look_up.git@master
+gene-specificity @ git+https://github.com/di2ag/gene-specificity.git@master
+reasoner-validator @ git+https://github.com/di2ag/reasoner-validator.git@master
