--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -41,9 +41,9 @@ pipeline {
         }
         stage('Build Docker') {
            when { expression { return env.BUILD == 'true' }}
-            steps {
+            steps {=
                 script {
-                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./Dockerfile ./chp_api")
+                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f Dockerfile .")
                     docker.withRegistry('https://853771734544.dkr.ecr.us-east-1.amazonaws.com', 'ecr:us-east-1:aws-ifx-deploy') {
                         docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}")
                     }
