--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "python.analysis.typeCheckingMode": "off",
     "workbench.editor.enablePreview": false,
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "production"
+    ]
 }
