adding new local dev support

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-chp_db_fixture.json.gz
-#deployment-script
-deployment-script
+# env files for development
+.dev-db.env
+.dev.env
+
+# data files for development
 chp.sql
+chp_db_fixture.json.gz
 
 #SSH Keys
 id_rsa*
@@ -135,3 +138,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/Dockerfile.dev-db
