--- a/Dockerfile.new
+++ b/Dockerfile.new
@@ -6,7 +6,7 @@ FROM python:3.8.3 as venv_builder
 COPY requirements.txt .
 RUN python3 -m venv /opt/venv
 RUN /opt/venv/bin/pip install -r requirements.txt
-
+RUN /opt/venv/bin/pip install -r requirements-dev.txt
 ###########
 # CHP API #
 ###########
