--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -51,7 +51,7 @@ pipeline {
                     sh '''
                     cp deploy/chp-api/configs/nginx.conf deploy/chp-api/nginx/
                     '''
-                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./deploy/chp-api/nginx .")
+                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./deploy/chp-api/nginx ./")
                     sh '''
                     docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 853771734544.dkr.ecr.us-east-1.amazonaws.com
                     '''
