fix: build script

--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -50,8 +50,9 @@ pipeline {
                     docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}")
                     sh '''
                     cp deploy/chp-api/configs/nginx.conf deploy/chp-api/nginx/
+                    cd deploy.chp-api/nginx
                     '''
-                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./deploy/chp-api/nginx ./")
+                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./Dockerfile .")
                     sh '''
                     docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 853771734544.dkr.ecr.us-east-1.amazonaws.com
                     '''
