--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -50,7 +50,7 @@ pipeline {
                     docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}")
                     sh '''
                     cp deploy/chp-api/configs/nginx.conf deploy/chp-api/nginx/
-                    cd deploy.chp-api/nginx
+                    cd deploy/chp-api/nginx
                     '''
                     docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./Dockerfile .")
                     sh '''
