--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -66,16 +66,21 @@ pipeline {
                 checkout scm
                 configFileProvider([
                     configFile(fileId: 'values-ci.yaml', targetLocation: 'deploy/chp-api/values-ncats.yaml'),
-                    configFile(fileId: 'chp-secrets.sh', targetLocation: 'deploy/chp-api/chp-secrets.sh')
+                    configFile(fileId: 'prepare.sh', targetLocation: 'deploy/chp-api/prepare.sh')
                 ]){
                     script {
                       sh '''
                       aws --region ${AWS_REGION} eks update-kubeconfig --name ${KUBERNETES_CLUSTER_NAME}
-                      cd deploy/chp-api && /bin/bash chp-secrets.sh && /bin/bash deploy.sh
+                      cd deploy/chp-api && /bin/bash prepare.sh && /bin/bash deploy.sh
                       '''
                     }
                 }
-                cleanWs()
+            }
+            post {
+                always {
+                    echo " Clean up the workspace in deploy node!"
+                    cleanWs()
+                }
             }
         }
     }
