fix: modified ingress rules

--- a/deploy/chp-api/templates/ingress.yaml
+++ b/deploy/chp-api/templates/ingress.yaml
@@ -30,3 +30,4 @@ spec:
               name: {{ .Values.appname }}
               port:
                 number: {{ .Values.service.port }}
+{{- end }}                
