--- a/deploy/chp-api/templates/ingress.yaml
+++ b/deploy/chp-api/templates/ingress.yaml
@@ -13,21 +13,18 @@ metadata:
   {{- end }}
 spec:
   rules:
-    - host: {{ .Values.ingress.host | quote }}
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
       http:
         paths:
-        - path: /*
-          pathType: ImplementationSpecific
-          backend:
-            service:
-              name: ssl-redirect
-              port:
-                name: use-annotation
-        - path: /*
-          pathType: ImplementationSpecific
-          backend:
-            service:
-              name: {{ .Values.appname }}
-              port:
-                number: {{ .Values.service.port }}
-{{- end }}                
+          {{- range .paths }}
+          - path: {{ .path }}
+            pathType: {{ .pathType }}
+            backend:
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: {{ $svcPort }}
+          {{- end }}
+    {{- end }}
+{{- end }}
